[gd_scene load_steps=77 format=2]

[ext_resource path="res://src/GUI/Textbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Levels/Streets/Level_Start.png" type="Texture" id=2]
[ext_resource path="res://src/Actors/MainChar/2ndLevelLirik.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Props/StreetLevel/1stHouse/LeftFence.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Props/StreetLevel/1stHouse/RightFence.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Props/StreetLevel/Shared/YellowFlower.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Levels/Streets.gd" type="Script" id=7]
[ext_resource path="res://src/Props/StreetLevel/1stHouse/Cat.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Props/StreetLevel/1stHouse/ThingNextToCat.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Props/StreetLevel/1stHouse/FireHydrant.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Props/StreetLevel/Shared/BlueMailbox.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/Props/StreetLevel/Shared/PinkFlower.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/Props/StreetLevel/Shared/WhiteMailbox.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/Props/StreetLevel/RatGraffitiHouse/BrownFence.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/Props/StreetLevel/Shared/RedFlower.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/Props/StreetLevel/BlueHouse/LeftWhiteFence.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/Props/StreetLevel/BlueHouse/RightWhiteFence.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/Props/StreetLevel/Shared/BlueFlower.tscn" type="PackedScene" id=18]
[ext_resource path="res://src/Props/StreetLevel/Road/BlueTruck.tscn" type="PackedScene" id=19]
[ext_resource path="res://src/Helpers/Camera/CustomDelimiter2D.tscn" type="PackedScene" id=20]
[ext_resource path="res://src/GUI/Inventory.tscn" type="PackedScene" id=21]
[ext_resource path="res://src/Props/StreetLevel/Road/OrangeCone.tscn" type="PackedScene" id=22]
[ext_resource path="res://src/Helpers/GUI/HealthBar.tscn" type="PackedScene" id=23]
[ext_resource path="res://assets/GUI/cashIcon.png" type="Texture" id=24]
[ext_resource path="res://src/Props/StreetLevel/Road/GreenCar.tscn" type="PackedScene" id=25]
[ext_resource path="res://src/Helpers/GUI/Pause/PauseScreenContainer.tscn" type="PackedScene" id=26]
[ext_resource path="res://src/Props/StreetLevel/Road/OrangeCar.tscn" type="PackedScene" id=27]
[ext_resource path="res://src/Props/StreetLevel/Road/LampWithGarbage.tscn" type="PackedScene" id=28]
[ext_resource path="res://src/Props/StreetLevel/Road/TruckWithPost.tscn" type="PackedScene" id=29]
[ext_resource path="res://src/Props/StreetLevel/Road/RegularLamp.tscn" type="PackedScene" id=30]
[ext_resource path="res://src/Props/StreetLevel/Road/RedTruck.tscn" type="PackedScene" id=31]
[ext_resource path="res://src/Props/StreetLevel/Road/LeftBox.tscn" type="PackedScene" id=32]
[ext_resource path="res://src/Props/StreetLevel/Road/RightBoxes.tscn" type="PackedScene" id=33]
[ext_resource path="res://src/Props/StreetLevel/Trees/MIddleTree.tscn" type="PackedScene" id=34]
[ext_resource path="res://src/Props/StreetLevel/Trees/TopLeftTree.tscn" type="PackedScene" id=35]
[ext_resource path="res://src/Props/StreetLevel/Trees/BottomLeftTree.tscn" type="PackedScene" id=36]
[ext_resource path="res://src/Props/StreetLevel/Trees/TopRightTree.tscn" type="PackedScene" id=37]
[ext_resource path="res://src/Props/StreetLevel/Trees/BottomRightTree.tscn" type="PackedScene" id=38]
[ext_resource path="res://src/Props/StreetLevel/Shared/WhiteFlower.tscn" type="PackedScene" id=39]
[ext_resource path="res://src/Props/StreetLevel/Road/BusStop.tscn" type="PackedScene" id=40]
[ext_resource path="res://src/Helpers/ObjectPool.gd" type="Script" id=41]
[ext_resource path="res://src/GUI/WarningSign.tscn" type="PackedScene" id=42]
[ext_resource path="res://assets/SpriteSheets/falling_leaf_particle2.png" type="Texture" id=43]
[ext_resource path="res://src/GUI/DashCooldownUI.tscn" type="PackedScene" id=177]
[ext_resource path="res://assets/fonts/Early GameBoy.ttf" type="DynamicFontData" id=178]
[ext_resource path="res://assets/GUI/BossHealthBarTheme.tres" type="Theme" id=179]
[ext_resource path="res://src/GUI/SuperBar.tscn" type="PackedScene" id=182]
[ext_resource path="res://src/Helpers/Utilities/Crt/CRTLayer.tscn" type="PackedScene" id=200]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 387.802, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 119.7 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( -76.1052, -3.69151 )
b = Vector2( -11.3035, -3.8788 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( -41.4569, 5.86019 )
b = Vector2( 39.0771, 6.04748 )

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( -12.0526, -3.31694 )
b = Vector2( -12.4272, 10.5424 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10.4254, 17.6327 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4.19347, 10 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 36.5392, 10 )

[sub_resource type="SegmentShape2D" id=9]
a = Vector2( 190.691, -66.1549 )
b = Vector2( 532.039, -66.6376 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 6.13144, 11.5701 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 10, 52.5724 )

[sub_resource type="SegmentShape2D" id=12]
a = Vector2( 116.923, 8.23139 )
b = Vector2( -2.45743, 8.89956 )

[sub_resource type="SegmentShape2D" id=13]
a = Vector2( -0.578247, -28.2061 )
b = Vector2( -0.578247, 12.2727 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 33.4598, 10 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 8.42667, 10 )

[sub_resource type="SegmentShape2D" id=16]
a = Vector2( 1.66437, -33.5508 )
b = Vector2( 1.83124, 26.517 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 13.5503, 10 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 5.87134, 20.5271 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 22.7273, 19.9653 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 29.6569, 3.85847 )

[sub_resource type="SegmentShape2D" id=21]
a = Vector2( 26.8477, 1.38559 )
b = Vector2( -7.98795, 1.38559 )

[sub_resource type="SegmentShape2D" id=22]
a = Vector2( 110.796, -16.3299 )
b = Vector2( 110.963, 26.3849 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 11.689, 10 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 4.34729, 10 )

[sub_resource type="DynamicFont" id=25]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 178 )

[sub_resource type="DynamicFont" id=26]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 178 )

[sub_resource type="Shader" id=27]
code = "shader_type particles;

uniform vec4 color_1 : hint_color = vec4( 1.0 );
uniform vec4 color_2 : hint_color = vec4( 1.0 );
uniform vec4 color_3 : hint_color = vec4( 1.0 );
uniform vec4 color_4 : hint_color = vec4( 1.0 );

float rand_from_seed(inout uint seed) {
	int k;
	int s = int(seed);
	if (s == 0)
	s = 305420679;
	k = s / 127773;
	s = 16807 * (s - k * 127773) - 2836 * k;
	if (s < 0)
		s += 2147483647;
	seed = uint(s);
	return float(seed % uint(65536)) / 65535.0;
}

float rand_from_seed_m1_p1(inout uint seed) {
	return rand_from_seed(seed) * 2.0 - 1.0;
}

uint hash(uint x) {
	x = ((x >> uint(16)) ^ x) * uint(73244475);
	x = ((x >> uint(16)) ^ x) * uint(73244475);
	x = (x >> uint(16)) ^ x;
	return x;
}

void vertex() {
	uint base_number = NUMBER;
	uint alt_seed = hash(base_number + uint(1) + RANDOM_SEED);
	

	if (RESTART) 
	{
		TRANSFORM[3].x = rand_from_seed( alt_seed ) * 30.0 - 15.0;
		TRANSFORM[3].y = rand_from_seed( alt_seed ) * 30.0 - 15.0;
		VELOCITY.x = rand_from_seed( alt_seed ) * ( -10.0 );
		VELOCITY.y = rand_from_seed( alt_seed ) * ( 10.0 );
		
		int color_index = int( rand_from_seed( alt_seed ) * 4.0 );
		if( color_index == 0 )
		{
			COLOR = color_1;
		}
		else if( color_index == 1 )
		{
			COLOR = color_2;
		}
		else if( color_index == 2 )
		{
			COLOR = color_3;
		}
		else if( color_index == 3 )
		{
			COLOR = color_4;
		}
	} 
	else
	{
		CUSTOM.x += DELTA;
		TRANSFORM[0] = vec4(cos(CUSTOM.x), -sin(CUSTOM.x), 0.0, 0.0);
		TRANSFORM[1] = vec4(sin(CUSTOM.x), cos(CUSTOM.x), 0.0, 0.0);
	}
}

"

[sub_resource type="ShaderMaterial" id=28]
shader = SubResource( 27 )
shader_param/color_1 = Color( 0.152941, 0.403922, 0.360784, 1 )
shader_param/color_2 = Color( 0.203922, 0.596078, 0.372549, 1 )
shader_param/color_3 = Color( 0.309804, 0.772549, 0.360784, 1 )
shader_param/color_4 = Color( 0.454902, 0.917647, 0.431373, 1 )

[node name="Streets" type="Node2D"]
pause_mode = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="LevelBackground" type="Sprite" parent="."]
pause_mode = 1
position = Vector2( 0.584732, -0.235977 )
texture = ExtResource( 2 )
centered = false

[node name="Boundaries" type="Node" parent="LevelBackground"]

[node name="OutsideBoundaries" type="StaticBody2D" parent="LevelBackground/Boundaries"]

[node name="Top" type="CollisionShape2D" parent="LevelBackground/Boundaries/OutsideBoundaries"]
position = Vector2( 383.177, -10.2109 )
shape = SubResource( 1 )

[node name="Bottom" type="CollisionShape2D" parent="LevelBackground/Boundaries/OutsideBoundaries"]
position = Vector2( 384.765, 233.155 )
shape = SubResource( 1 )

[node name="Left" type="CollisionShape2D" parent="LevelBackground/Boundaries/OutsideBoundaries"]
position = Vector2( -10.3627, 114.647 )
shape = SubResource( 2 )

[node name="Right" type="CollisionShape2D" parent="LevelBackground/Boundaries/OutsideBoundaries"]
position = Vector2( 778.188, 108.466 )
shape = SubResource( 2 )

[node name="RedHouseBoundaries" type="StaticBody2D" parent="LevelBackground/Boundaries"]
position = Vector2( 75.8518, 58.2467 )

[node name="FrontDoorHouse" type="CollisionShape2D" parent="LevelBackground/Boundaries/RedHouseBoundaries"]
shape = SubResource( 3 )

[node name="FrontOfGarage" type="CollisionShape2D" parent="LevelBackground/Boundaries/RedHouseBoundaries"]
position = Vector2( 31.0899, 4.30763 )
shape = SubResource( 4 )

[node name="FrontDoorHouse2" type="CollisionShape2D" parent="LevelBackground/Boundaries/RedHouseBoundaries"]
shape = SubResource( 5 )

[node name="TrashCans" type="CollisionShape2D" parent="LevelBackground/Boundaries/RedHouseBoundaries"]
position = Vector2( 6.45899, 20.2679 )
shape = SubResource( 6 )

[node name="Chair" type="CollisionShape2D" parent="LevelBackground/Boundaries/RedHouseBoundaries"]
position = Vector2( -43.8317, -8.61919 )
shape = SubResource( 7 )

[node name="Street" type="StaticBody2D" parent="LevelBackground/Boundaries"]
position = Vector2( 232.93, 170.192 )

[node name="BusStop" type="CollisionShape2D" parent="LevelBackground/Boundaries/Street"]
position = Vector2( 234.554, -68.9937 )
shape = SubResource( 8 )

[node name="RightSide" type="CollisionShape2D" parent="LevelBackground/Boundaries/Street"]
shape = SubResource( 9 )

[node name="RatGraffitiHouse" type="StaticBody2D" parent="LevelBackground/Boundaries"]
position = Vector2( 212.257, 50.113 )

[node name="RightPot" type="CollisionShape2D" parent="LevelBackground/Boundaries/RatGraffitiHouse"]
position = Vector2( 0.830414, 24.8349 )
shape = SubResource( 10 )

[node name="LeftBushes" type="CollisionShape2D" parent="LevelBackground/Boundaries/RatGraffitiHouse"]
position = Vector2( -53.4539, 0.445442 )
shape = SubResource( 11 )

[node name="FrontOfHouse" type="CollisionShape2D" parent="LevelBackground/Boundaries/RatGraffitiHouse"]
position = Vector2( -38.7541, 5.12267 )
shape = SubResource( 12 )

[node name="RightSideFence" type="CollisionShape2D" parent="LevelBackground/Boundaries/RatGraffitiHouse"]
position = Vector2( 77.9811, 41.6693 )
shape = SubResource( 13 )

[node name="RightBushes" type="CollisionShape2D" parent="LevelBackground/Boundaries/RatGraffitiHouse"]
position = Vector2( 40.7835, 18.0793 )
shape = SubResource( 14 )

[node name="LeftPot" type="CollisionShape2D" parent="LevelBackground/Boundaries/RatGraffitiHouse"]
position = Vector2( -31.7343, 26.7733 )
shape = SubResource( 15 )

[node name="BlueHouse" type="StaticBody2D" parent="LevelBackground/Boundaries"]
position = Vector2( 311.481, 76.7211 )

[node name="LeftFence" type="CollisionShape2D" parent="LevelBackground/Boundaries/BlueHouse"]
position = Vector2( -12.5057, 0.201645 )
shape = SubResource( 16 )

[node name="Bench" type="CollisionShape2D" parent="LevelBackground/Boundaries/BlueHouse"]
position = Vector2( 2.62204, -23.0365 )
shape = SubResource( 17 )

[node name="LeftSideHouse" type="CollisionShape2D" parent="LevelBackground/Boundaries/BlueHouse"]
position = Vector2( 23.0365, -22.6619 )
shape = SubResource( 18 )

[node name="RightSideHouse" type="CollisionShape2D" parent="LevelBackground/Boundaries/BlueHouse"]
position = Vector2( 83.5305, -29.0297 )
shape = SubResource( 19 )

[node name="Bushes" type="CollisionShape2D" parent="LevelBackground/Boundaries/BlueHouse"]
position = Vector2( 78.8484, -1.49831 )
shape = SubResource( 20 )

[node name="FrontOfHouse" type="CollisionShape2D" parent="LevelBackground/Boundaries/BlueHouse"]
position = Vector2( 36.5212, -22.4746 )
shape = SubResource( 21 )

[node name="RIghtSideFence" type="CollisionShape2D" parent="LevelBackground/Boundaries/BlueHouse"]
shape = SubResource( 22 )

[node name="PogolisStore" type="StaticBody2D" parent="LevelBackground/Boundaries"]
position = Vector2( 663.565, 81.5804 )

[node name="VendingMachine" type="CollisionShape2D" parent="LevelBackground/Boundaries/PogolisStore"]
position = Vector2( -17.8582, 19.4457 )
shape = SubResource( 23 )

[node name="LeftPot" type="CollisionShape2D" parent="LevelBackground/Boundaries/PogolisStore"]
position = Vector2( -40.4787, 18.0567 )
shape = SubResource( 24 )

[node name="RightPot" type="CollisionShape2D" parent="LevelBackground/Boundaries/PogolisStore"]
position = Vector2( 44.4473, 18.2551 )
shape = SubResource( 24 )

[node name="TrashCan" type="CollisionShape2D" parent="LevelBackground/Boundaries/PogolisStore"]
position = Vector2( 1.19061, 17.8583 )
shape = SubResource( 24 )

[node name="CameraPositions" type="Node" parent="LevelBackground"]

[node name="Street_Delimiter" parent="LevelBackground/CameraPositions" instance=ExtResource( 20 )]
position = Vector2( 0.704262, -0.318108 )

[node name="BottomRight" parent="LevelBackground/CameraPositions/Street_Delimiter" index="0"]
position = Vector2( 766.858, 223.327 )

[node name="Interactions" type="Node" parent="LevelBackground"]

[node name="Teleports" type="Node" parent="LevelBackground"]

[node name="SpecialZones" type="Node" parent="LevelBackground"]

[node name="Checkpoints" type="Node" parent="LevelBackground"]

[node name="YSort" type="YSort" parent="."]
pause_mode = 1

[node name="TrafficSystemRight" type="Node2D" parent="YSort"]
visible = false
script = ExtResource( 41 )
g_copies_of_each = 1
g_min_y = 160
g_max_y = 170
g_max_spawn_wait_ms = 4000
g_object_velocity = 3.0
g_path = "res://src/Props/StreetLevel/Vehicles/"
g_starting_x = 800

[node name="TrafficSystemLeft" type="Node2D" parent="YSort"]
visible = false
position = Vector2( 0.707108, -0.707413 )
script = ExtResource( 41 )
g_copies_of_each = 1
g_min_y = 140
g_max_y = 160
g_max_spawn_wait_ms = 4000
g_object_velocity = -3.0
g_path = "res://src/Props/StreetLevel/Vehicles/"
g_starting_x = 0

[node name="Actors" type="YSort" parent="YSort"]

[node name="LirikYaki" parent="YSort/Actors" instance=ExtResource( 3 )]
position = Vector2( 19.8676, 94.1062 )

[node name="RatGraffitiHouse" type="YSort" parent="YSort"]
position = Vector2( 245.02, 88.3893 )

[node name="WhiteMailbox" parent="YSort/RatGraffitiHouse" instance=ExtResource( 13 )]
position = Vector2( -19.0287, 15.7918 )

[node name="BrownFence" parent="YSort/RatGraffitiHouse" instance=ExtResource( 14 )]
position = Vector2( 16.9615, 16.6709 )

[node name="PinkFlower" parent="YSort/RatGraffitiHouse" instance=ExtResource( 12 )]
position = Vector2( 20.6464, 0.601875 )

[node name="1stHouse" type="YSort" parent="YSort"]
position = Vector2( 55.1622, 77.7827 )

[node name="BlueMailbox" parent="YSort/1stHouse" instance=ExtResource( 11 )]
position = Vector2( -11.1702, 26.3851 )

[node name="BlueTruck" parent="YSort/1stHouse" instance=ExtResource( 19 )]
position = Vector2( 339.312, 119.089 )

[node name="FireHydrant" parent="YSort/1stHouse" instance=ExtResource( 10 )]
position = Vector2( -43.6554, 46.1588 )

[node name="ThingNextToCat" parent="YSort/1stHouse" instance=ExtResource( 9 )]
position = Vector2( 19.8303, 19.2579 )

[node name="Cat" parent="YSort/1stHouse" instance=ExtResource( 8 )]
position = Vector2( 32.2808, 16.3623 )

[node name="RightFence" parent="YSort/1stHouse" instance=ExtResource( 5 )]
position = Vector2( 2.05014, 27.3086 )

[node name="Flower" parent="YSort/1stHouse" instance=ExtResource( 6 )]
position = Vector2( -2.48939, 3.2182 )

[node name="LeftFence" parent="YSort/1stHouse" instance=ExtResource( 4 )]
position = Vector2( -44.9967, 27.1714 )

[node name="BlueHouse" type="YSort" parent="YSort"]
position = Vector2( 345.438, 87.8326 )

[node name="BlueFlower" parent="YSort/BlueHouse" instance=ExtResource( 18 )]
position = Vector2( 34.2188, -0.780167 )

[node name="YellowFlower" parent="YSort/BlueHouse" instance=ExtResource( 6 )]
position = Vector2( 59.2147, 1.18297 )

[node name="BlueMailbox" parent="YSort/BlueHouse" instance=ExtResource( 11 )]
position = Vector2( 19.5235, 15.3305 )

[node name="RightWhiteFence" parent="YSort/BlueHouse" instance=ExtResource( 17 )]
position = Vector2( 50.5532, 17.2271 )

[node name="LeftWhiteFence" parent="YSort/BlueHouse" instance=ExtResource( 16 )]
position = Vector2( -28.4512, 17.2239 )

[node name="RedFlower" parent="YSort/BlueHouse" instance=ExtResource( 15 )]
position = Vector2( -30.7759, -5.80659 )

[node name="Road" type="YSort" parent="YSort"]

[node name="BusStop" parent="YSort/Road" instance=ExtResource( 40 )]
position = Vector2( 470.582, 113.795 )

[node name="RedTruck" parent="YSort/Road" instance=ExtResource( 31 )]
position = Vector2( 544.896, 120.023 )

[node name="Lamp2" parent="YSort/Road" instance=ExtResource( 30 )]
position = Vector2( 728.847, 123.944 )

[node name="Lamp" parent="YSort/Road" instance=ExtResource( 30 )]
position = Vector2( 392.704, 123.83 )

[node name="TruckWithPost" parent="YSort/Road" instance=ExtResource( 29 )]
position = Vector2( 162.633, 124.006 )

[node name="LampostWithGarbage" parent="YSort/Road" instance=ExtResource( 28 )]
position = Vector2( 91.6733, 213.011 )

[node name="OrangeCar" parent="YSort/Road" instance=ExtResource( 27 )]
position = Vector2( 47.6046, 188.298 )

[node name="GreenCar" parent="YSort/Road" instance=ExtResource( 25 )]
position = Vector2( 732.626, 191.91 )

[node name="Cone2" parent="YSort/Road" instance=ExtResource( 22 )]
position = Vector2( 706.653, 135.804 )

[node name="Cone" parent="YSort/Road" instance=ExtResource( 22 )]
position = Vector2( 690.625, 146.573 )

[node name="RightBoxes" parent="YSort/Road" instance=ExtResource( 33 )]
position = Vector2( 615.742, 126.569 )

[node name="box" parent="YSort/Road" instance=ExtResource( 32 )]
position = Vector2( 593.569, 138.952 )

[node name="Trees" type="YSort" parent="YSort"]
position = Vector2( 475.537, 30.7013 )

[node name="MIddleTree2" parent="YSort/Trees" instance=ExtResource( 34 )]
position = Vector2( 268.237, 48.8194 )

[node name="WhiteFlower" parent="YSort/Trees" instance=ExtResource( 39 )]
position = Vector2( -16.7489, 31.496 )

[node name="WhiteFlower2" parent="YSort/Trees" instance=ExtResource( 39 )]
position = Vector2( 32.3699, 43.716 )

[node name="BottomLeftTree" parent="YSort/Trees" instance=ExtResource( 36 )]
position = Vector2( -49.6209, 49.1074 )

[node name="MIddleTree" parent="YSort/Trees" instance=ExtResource( 34 )]
position = Vector2( 10.3189, 29.3332 )

[node name="TopRightTree" parent="YSort/Trees" instance=ExtResource( 37 )]
position = Vector2( 48.0003, 4.0427 )

[node name="TopLeftTree" parent="YSort/Trees" instance=ExtResource( 35 )]
position = Vector2( -25.3774, -2.94439 )

[node name="BottomRightTree" parent="YSort/Trees" instance=ExtResource( 38 )]
position = Vector2( 47.128, 66.0709 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="BossGui" type="Control" parent="GUI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="GUI/BossGui"]
anchor_left = 0.025
anchor_right = 0.025
margin_left = 263.0
margin_top = 520.0
margin_right = 759.0
margin_bottom = 542.0
theme = ExtResource( 179 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/BossGui"]
margin_left = 268.112
margin_top = 520.0
margin_right = 756.112
margin_bottom = 544.0
custom_fonts/font = SubResource( 25 )
text = "Rex Magnus Rattorum, The Rat King"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerGui" type="Control" parent="GUI"]
margin_left = -2.33597
margin_top = -2.00226
margin_right = 37.664
margin_bottom = 37.9977
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cash" type="TextureRect" parent="GUI/PlayerGui"]
margin_left = 51.0934
margin_top = 48.1271
margin_right = 75.0934
margin_bottom = 73.1271
mouse_filter = 2
texture = ExtResource( 24 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthBar" parent="GUI/PlayerGui" instance=ExtResource( 23 )]
margin_left = 63.0934
margin_top = 30.1271
margin_right = 266.093
margin_bottom = 51.1271
mouse_filter = 2

[node name="DashCooldownUI" parent="GUI/PlayerGui" instance=ExtResource( 177 )]
margin_left = 970.533
margin_top = 19.3803
margin_right = 970.533
margin_bottom = 19.3802

[node name="Coins" type="Label" parent="GUI/PlayerGui"]
margin_left = 90.1344
margin_top = 50.9467
margin_right = 192.134
margin_bottom = 60.9467
rect_scale = Vector2( 1.6, 1.6 )
size_flags_horizontal = 0
custom_fonts/font = SubResource( 26 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/PlayerGui"]
margin_left = 76.2014
margin_top = 56.7737
margin_right = 96.2014
margin_bottom = 86.7737
rect_scale = Vector2( 1.6, 1.6 )
size_flags_horizontal = 0
custom_fonts/font = SubResource( 26 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuperBar" parent="GUI/PlayerGui" instance=ExtResource( 182 )]
margin_left = 30.3969
margin_top = 87.1906
margin_right = 134.397
margin_bottom = 119.191

[node name="Inventory" parent="GUI/PlayerGui" instance=ExtResource( 21 )]
position = Vector2( 15.0934, 21.6612 )
scale = Vector2( 2, 2 )

[node name="PauseScreenContainer" parent="GUI" instance=ExtResource( 26 )]
margin_left = 9.33495
margin_top = -6.17266
margin_right = 9.33484
margin_bottom = -6.17267

[node name="TextBox2" parent="GUI" instance=ExtResource( 1 )]
pause_mode = 2
visible = false
margin_left = -11.3578
margin_top = -5.88671
margin_right = -11.358
margin_bottom = -5.88672
mouse_filter = 1

[node name="TextBox" parent="GUI" instance=ExtResource( 1 )]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
margin_left = -512.0
margin_top = -576.0
margin_right = 512.0

[node name="CRTLayer" parent="GUI" instance=ExtResource( 200 )]
visible = false

[node name="Warnings" type="Control" parent="GUI"]
margin_left = 5.33936
margin_top = 35.2208
margin_right = 45.3394
margin_bottom = 75.2208
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningSignRight" parent="GUI/Warnings" instance=ExtResource( 42 )]
visible = false
margin_left = 949.246
margin_top = 278.684
margin_right = 981.246
margin_bottom = 310.684

[node name="WarningSignLeft" parent="GUI/Warnings" instance=ExtResource( 42 )]
visible = false
margin_left = 45.041
margin_top = 278.684
margin_right = 77.041
margin_bottom = 310.684

[node name="Leaves" type="Particles2D" parent="."]
position = Vector2( 512.785, 42.5487 )
amount = 60
lifetime = 10.0
preprocess = 60.0
speed_scale = 0.5
process_material = SubResource( 28 )
texture = ExtResource( 43 )

[node name="Leaves2" type="Particles2D" parent="."]
position = Vector2( 162.056, 4.50578 )
amount = 30
lifetime = 10.0
preprocess = 60.0
speed_scale = 0.5
process_material = SubResource( 28 )
texture = ExtResource( 43 )

[connection signal="SpawnWarning" from="YSort/TrafficSystemRight" to="." method="_on_TrafficSystemRight_SpawnWarning"]
[connection signal="SpawnWarning" from="YSort/TrafficSystemLeft" to="." method="_on_TrafficSystemLeft_SpawnWarning"]
[connection signal="closed" from="GUI/TextBox2" to="." method="_on_TextBox_closed"]

[editable path="LevelBackground/CameraPositions/Street_Delimiter"]
